--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,14 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# Config files
+lib/config.php
+
+# IDE files
+.idea/
+
+# Misc
+access_log
+error_log
+*.sh
